--- a/examples/homer/index.html
+++ b/examples/homer/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>famous-map example</title>
+        <title>famous-map homer example</title>
         <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="stylesheet" type="text/css" href="../lib/famous/core/famous.css" />
-        <link rel="stylesheet" type="text/css" href="../content/css/styles.css" />
-        <script type="text/javascript" src="../lib/polyfills/functionPrototypeBind.js"></script>
-        <script type="text/javascript" src="../lib/polyfills/classList.js"></script>
-        <script type="text/javascript" src="../lib/polyfills/requestAnimationFrame.js"></script>        
+        <link rel="stylesheet" type="text/css" href="bower_components/famous/core/famous.css" />
+        <link rel="stylesheet" type="text/css" href="styles.css" />
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-        <script type="text/javascript" src="../lib/requirejs/require.js" data-main="requireConfig"></script>
+        <script type="text/javascript" src="bower_components/requirejs/require.js" data-main="requireConfig"></script>
     </head>
     <body></body>
 </html>
