--- a/examples/homer/index.html
+++ b/examples/homer/index.html
@@ -6,10 +6,10 @@
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="stylesheet" type="text/css" href="bower_components/famous/core/famous.css" />
+        <link rel="stylesheet" type="text/css" href="../../bower_components/famous/core/famous.css" />
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-        <script type="text/javascript" src="bower_components/requirejs/require.js" data-main="requireConfig"></script>
+        <script type="text/javascript" src="../../bower_components/requirejs/require.js" data-main="requireConfig"></script>
     </head>
     <body></body>
 </html>
