--- a/examples/homer/index.html
+++ b/examples/homer/index.html
@@ -6,10 +6,33 @@
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <link rel="stylesheet" type="text/css" href="../../bower_components/famous/core/famous.css" />
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        
+        <!-- shims for backwards compatibility -->
+        <script type="text/javascript" src="http://code.famo.us/lib/functionPrototypeBind.js"></script>
+        <script type="text/javascript" src="http://code.famo.us/lib/classList.js"></script>
+        <script type="text/javascript" src="http://code.famo.us/lib/requestAnimationFrame.js"></script>
+
+        <!-- google maps -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-        <script type="text/javascript" src="../../bower_components/requirejs/require.js" data-main="requireConfig"></script>
+        
+        <!-- module loader -->
+        <script type="text/javascript" src="http://code.famo.us/lib/require.js"></script>
+
+        <!-- famous -->
+        <link rel="stylesheet" type="text/css" href="http://code.famo.us/famous/0.2/famous.css" />
+        <script type="text/javascript" src="http://code.famo.us/famous/0.2/famous.min.js"></script>
+
+        <!-- app code -->
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <script type="text/javascript">
+            require.config({
+                baseUrl: '',
+                paths: {
+                    'famous-map': '../..',
+                }
+            });
+            require(['example']);
+        </script>
     </head>
     <body></body>
 </html>
