--- a/examples/demo/index.html
+++ b/examples/demo/index.html
@@ -8,19 +8,19 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         
         <!-- shims for backwards compatibility -->
-        <script type="text/javascript" src="http://code.famo.us/lib/functionPrototypeBind.js"></script>
-        <script type="text/javascript" src="http://code.famo.us/lib/classList.js"></script>
-        <script type="text/javascript" src="http://code.famo.us/lib/requestAnimationFrame.js"></script>
+        <script type="text/javascript" src="https://code.famo.us/lib/functionPrototypeBind.js"></script>
+        <script type="text/javascript" src="https://code.famo.us/lib/classList.js"></script>
+        <script type="text/javascript" src="https://code.famo.us/lib/requestAnimationFrame.js"></script>
 
         <!-- google maps -->
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
         
         <!-- module loader -->
-        <script type="text/javascript" src="http://code.famo.us/lib/require.js"></script>
+        <script type="text/javascript" src="https://code.famo.us/lib/require.js"></script>
 
         <!-- famous -->
-        <link rel="stylesheet" type="text/css" href="http://code.famo.us/famous/0.2/famous.css" />
-        <script type="text/javascript" src="http://code.famo.us/famous/0.2/famous.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://code.famo.us/famous/0.2/famous.css" />
+        <script type="text/javascript" src="https://code.famo.us/famous/0.2/famous.min.js"></script>
 
         <!-- app code -->
         <link rel="stylesheet" type="text/css" href="styles.css" />
