Added support for Leaflet.js

--- a/examples/nyan-cat/index.html
+++ b/examples/nyan-cat/index.html
@@ -35,5 +35,7 @@
         </script>
 
     </head>
-    <body></body>
+    <body>
+        <a class='provider' href='leaflet.html'>Switch to Leaflet / OSM</a>
+    </body>
 </html>
