Fixed leaflet examples, due to http not being allowed by github-raw

--- a/examples/nyan-cat/leaflet.html
+++ b/examples/nyan-cat/leaflet.html
@@ -13,8 +13,8 @@
         <script type="text/javascript" src="https://code.famo.us/lib/requestAnimationFrame.js"></script>
         
         <!-- leaflet / open street maps -->
-        <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-        <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+        <link rel="stylesheet" href="https://rawgit.com/IjzerenHein/leaflet-dist/master/leaflet.css" />
+        <script src="https://rawgit.com/IjzerenHein/leaflet-dist/master/leaflet.js"></script>
 
         <!-- module loader -->
         <script type="text/javascript" src="https://code.famo.us/lib/require.js"></script>
