Added minified version of famous-map which should also fix the AMD loading issue of the example demos on github

--- a/examples/homer/index.html
+++ b/examples/homer/index.html
@@ -22,15 +22,12 @@
         <link rel="stylesheet" type="text/css" href="https://code.famo.us/famous/0.2/famous.css" />
         <script type="text/javascript" src="https://code.famo.us/famous/0.2/famous.min.js"></script>
 
+        <!-- famous-map -->
+        <script type="text/javascript" src="../../dist/famous-map.min.js"></script>
+        
         <!-- app code -->
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <script type="text/javascript">
-            require.config({
-                baseUrl: '',
-                paths: {
-                    'famous-map': '../..',
-                }
-            });
             require(['example']);
         </script>
     </head>
