Add support for OpenLayers 3
This implements all functions in MapView.js for OpenLayers 3. The demo
example is now also provided with OpenLayers 3 as map viewer.

--- a/examples/demo/openlayers3.html
+++ b/examples/demo/openlayers3.html
@@ -12,9 +12,9 @@
         <script type="text/javascript" src="https://code.famo.us/lib/classList.js"></script>
         <script type="text/javascript" src="https://code.famo.us/lib/requestAnimationFrame.js"></script>
 
-        <!-- leaflet / open street maps -->
-        <link rel="stylesheet" href="https://rawgit.com/IjzerenHein/leaflet-dist/master/leaflet.css" />
-        <script src="https://rawgit.com/IjzerenHein/leaflet-dist/master/leaflet.js"></script>
+        <!-- openlayers -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.3.0/ol.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.3.0/ol.js"></script>
 
         <!-- module loader -->
         <script type="text/javascript" src="https://code.famo.us/lib/require.js"></script>
@@ -34,6 +34,6 @@
 
     </head>
     <body>
-        <span class='provider'>Switch to <a href='index.html'>Google Maps</a> / <a href='openlayers3.html'>ol3</a></span
+        <span class='provider'>Switch to <a href='index.html'>Google Maps</a> / <a href='leaflet.html'>Leaflet</a></span
     </body>
 </html>
