--- a/examples/demo/leaflet.html
+++ b/examples/demo/leaflet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>famous-map demo</title>
+        <title>famous-map - Leaflet</title>
         <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -34,6 +34,14 @@
 
     </head>
     <body>
-        <span class='provider'>Switch to <a href='index.html'>Google Maps</a> / <a href='openlayers3.html'>ol3</a></span
+        <div class='provider'>
+            <span>Map-types:</span>
+            <ul>
+            <li><a href='index.html'>Google Maps</a></li>
+            <li><a href='leaflet.html'>Leaflet</a></li>
+            <li><a href='openlayers3.html'>OpenLayers 3</a></li>
+            <li><a href='mapboxgl.html'>MapBox GL</a></li>
+            </ul>
+        </div>
     </body>
 </html>
