--- a/examples/photos/mapboxgl.html
+++ b/examples/photos/mapboxgl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>famous-map - OpenLayers3</title>
+        <title>famous-map photos - Mapbox GL</title>
         <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -12,9 +12,9 @@
         <script type="text/javascript" src="https://code.famo.us/lib/classList.js"></script>
         <script type="text/javascript" src="https://code.famo.us/lib/requestAnimationFrame.js"></script>
 
-        <!-- openlayers -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.4.0/ol.min.css" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/ol3/3.4.0/ol.js"></script>
+        <!-- mapbox gl -->
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.7.0/mapbox-gl.css' rel='stylesheet' />
+        <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.7.0/mapbox-gl.js'></script>
 
         <!-- module loader -->
         <script type="text/javascript" src="https://code.famo.us/lib/require.js"></script>
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="https://code.famo.us/famous/0.3/famous.min.js"></script>
 
         <!-- famous-map -->
-        <script type="text/javascript" src="../../dist/famous-map.js"></script>
+        <script type="text/javascript" src="../../dist/famous-map.min.js"></script>
 
         <!-- app code -->
         <link rel="stylesheet" type="text/css" href="styles.css" />
