--- a/examples/photos/openlayers3.html
+++ b/examples/photos/openlayers3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>famous-map - OpenLayers3</title>
+        <title>famous-map photos - OpenLayers3</title>
         <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no" />
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="https://code.famo.us/famous/0.3/famous.min.js"></script>
 
         <!-- famous-map -->
-        <script type="text/javascript" src="../../dist/famous-map.js"></script>
+        <script type="text/javascript" src="../../dist/famous-map.min.js"></script>
 
         <!-- app code -->
         <link rel="stylesheet" type="text/css" href="styles.css" />
